--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
 
 	<section><h1>Plataforma como servicio → <em>PaaS</em></h1></section>
 
+	<section><em>Plataforma</em> := <em>Stack</em> + Añadidos.</section>
+
+	<section>
+	  <section><h1>Un stack es</h1>
+	    <h2 class='fragment'><em>Delivery</em></h2>
+	    <h2 class='fragment'>Marco de aplicaciones MVC u otro</h2>
+	    <h2 class='fragment'>Almacén de datos</h2>
+	    <h2 class='fragment'>Lenguaje de programación</h2>
+	  </section>
+
+	  <section>
+	    <h1>Marco de aplicaciones →</h1>
+	    <h2 class='fragment'>Django</h2>
+	    <h2 class='fragment'>Express</h2>
+	    <h2 class='fragment'>VertX</h2>
+	    <h2 class='fragment'>Java Play</h2>
+	  </section>
+	</section>
 
       </div> <!-- slides -->
       
