--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
 	    <h2 class='fragment'>VertX</h2>
 	    <h2 class='fragment'>Java Play</h2>
 	  </section>
+
+	  <section>
+	    <h1>Lenguajes →</h1>
+	    <h2 class='fragment'>Node.js</h2>
+	    <h2 class='fragment'>Python</h2>
+	    <h2 class='fragment'>Perl</h2>
+	    <h2 class='fragment'>Scala</h2>
+	    <h2 class='fragment'>Go</h2>
+	  </section>
 	</section>
 
       </div> <!-- slides -->
