--- a/index.html
+++ b/index.html
@@ -55,22 +55,53 @@
 	  </section>
 
 	  <section>
-	    <h1>Marco de aplicaciones →</h1>
-	    <h2 class='fragment'>Django</h2>
-	    <h2 class='fragment'>Express</h2>
-	    <h2 class='fragment'>VertX</h2>
-	    <h2 class='fragment'>Java Play</h2>
+	    <h2>Marco de aplicaciones →</h2>
+	    <h3 class='fragment'>Django</h3>
+	    <h3 class='fragment'>Express</h3>
+	    <h3 class='fragment'>VertX</h3>
+	    <h3 class='fragment'>Java Play</h3>
 	  </section>
 
 	  <section>
-	    <h1>Lenguajes →</h1>
-	    <h2 class='fragment'>Node.js</h2>
-	    <h2 class='fragment'>Python</h2>
-	    <h2 class='fragment'>Perl</h2>
-	    <h2 class='fragment'>Scala</h2>
-	    <h2 class='fragment'>Go</h2>
+	    <h2>Lenguajes →</h2>
+	    <h3 class='fragment'>Node.js</h3>
+	    <h3 class='fragment'>Python</h3>
+	    <h3 class='fragment'>Perl</h3>
+	    <h3 class='fragment'>Scala</h3>
+	    <h3 class='fragment'>Go</h3>
 	  </section>
+
+	  <section>
+	    <h2>Pilas →</h2>
+	    <h3 class='fragment'>LAMP</h3>
+	    <h3 class='fragment'>MEAN</h3>
+	    <h3 class='fragment'>LYME/LYCE</h3>
+	    <h3 class='fragment'>ELK</h3>
+	  </section>
+
+	  <section><h1>Hay un mundo entero ahí fuera</h1></section>
+
+	  <section><h2>Y además</h2>
+	    <h2 class='fragment'>Mensajería: AMQS, RabbitMQ</h2>
+	    <h2 class='fragment'>ElasticSearch</h2>
+	    <h2 class='fragment'>Logs</h2>
+
+	    <aside class='notes'>Estos son los añadidos terriblemente
+	      útiles para cualquier aplicación moderna que se precie.</aside>
+	  </section>
+	    
 	</section>
+
+	<section><h1>Un PaaS te da</h1>
+	  <h2 class='fragment'>Niveles gratis</h2>
+	  <h2 class='fragment'>Despliegue automático desde
+	  CI/Repo</h2>
+	  <h2 class='fragment'>Escalado automático h/v</h2>
+	  <h2 class='fragment'>Equilibrado de carga</h2>
+	</section>
+
+	</section>
+	
 
       </div> <!-- slides -->
       
