--- a/index.html
+++ b/index.html
@@ -44,7 +44,17 @@
 
 	<section><h1>Plataforma como servicio → <em>PaaS</em></h1></section>
 
-	<section><em>Plataforma</em> := <em>Stack</em> + Añadidos.</section>
+	<section><em>Plataforma</em> := <em>Stack</em> +
+	Añadidos.</section>
+
+	<section><h1>Generalmente online</h1>
+	  <h2 class='fragment'>Pero también privados/software libre:
+	    Cloud Foundry, OpenShift Origin</h2>
+
+	  <aside class='notes'>Usan por debajo técnicas de
+	  virtualización y aislamiento de recursos y orquestación de
+	  las mismas: OpenShift usa Docker + Kubernetes, 
+	</section>
 
 	<section>
 	  <section><h1>Un stack es</h1>
@@ -100,6 +110,8 @@
 	  <h2 class='fragment'>Equilibrado de carga</h2>
 	</section>
 
+	<section>
+	  <h2>PaaS útiles</h2>
 	</section>
 	
 
