--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
 
 	<section>
 	  <h2>PaaS útiles</h2>
+	  <h1 class='fragment'>OpenShift</h1>
+	  <h2  class='fragment'>Heroku</h2>
+	  <h3  class='fragment'>BlueMix, Nodejitsu, Nitrous.io,
+	  Google App Engine...</h3>
 	</section>
 	
 
