--- a/index.html
+++ b/index.html
@@ -118,6 +118,20 @@
 	  Google App Engine...</h3>
 	</section>
 	
+	<section>
+	  <section><h1>Usando OpenShift</h1>
+	    <h2>Alta → Descarga cliente → Subir clave ssh</h2>
+	  </section>
+
+	  <section>
+	    <h2><pre><code>rhc cartridge list</code></pre>
+	    </h2>
+	  </section>
+
+	  <section>
+	    <h2><pre><code>rhc app-create pispaas ruby-2.0</code></pre></h2>
+	      <img src='img/create.png' alt='create'>
+	  </section>
 
       </div> <!-- slides -->
       
