--- a/index.html
+++ b/index.html
@@ -133,6 +133,28 @@
 	      <img src='img/create.png' alt='create'>
 	  </section>
 
+
+	  <section>
+	    <h2><pre><code>cd pispaas</code></pre></h2>
+	    <h3>... <em>[cambia cosas]</em></h3>
+	    <h2><pre><code>git push</code></pre></h2>
+	  </section>
+
+	  <section>
+	    <img src='img/deploy.png' alt='desplegado'>
+	    
+	  </section>
+
+	  <section>
+	    <h2><pre><code>rhc cartridge-add 
+  phpmyadmin-4 mysql-5.5
+  --app pispaas</code></pre>
+
+	      <img src='img/phpmyadmin.png' title='myadmin'>
+	    </h2>
+	  </section>
+	</section>
+
       </div> <!-- slides -->
       
     </div> <!-- reveal -->
