Añade todas las imágenes

--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
 	      <img src='img/phpmyadmin.png' title='myadmin'>
 	    </h2>
 	  </section>
+
+	  <section>
+	    <h2><pre><code>rhc tail</code></pre></h2>
+	    <img src='img/log.png' alt='tail'>
+	  </section>
+
 	</section>
 
       </div> <!-- slides -->
